# MaaLostWord

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
MaaLostWord/: CMakeLists.txt
MaaLostWord/include/MaaLostWord/: HelloMaaWorld.h
MaaLostWord/src/: HelloMaaWorld.cpp  main.cpp
assets/config/: maa_pi_config.json
assets/resource/pipeline/: errands.json  exchanges.json  my_task.json
cmake/: MaaFramework.cmake
